--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,10 @@
 }
 
 .column {
-  height: 20px;
-  width: 20px;
+  height: 50px;
+  width: 50px;
+  margin: -3px;
+  background: #ddd;
   border: 1px solid silver;
   display: inline-block;
 }
