--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,24 @@
+#game {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+#score {
+  text-align: center;
+}
+
 .row {
 }
 
-.column {
-  height: 50px;
-  width: 50px;
+.cell {
+  height: 30px;
+  width: 35px;
   margin: -3px;
-  background: #ddd;
-  border: 1px solid silver;
+  background: #e8e8e8;
+  border: 1px solid #d4d4d4;
   display: inline-block;
 }
 
